wordpress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-ceres
  namespace: wordpress
  labels:
    app: wordpress-ceres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress-ceres
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: wordpress-ceres
    spec:
      containers:
      - name: wordpress-ceres
        image: wordpress:5.4-apache
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "600Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: 2
        readinessProbe:
          httpGet:
            path: /?nocache
            port: 80
            httpHeaders:
            - name: X-Forwarded-Proto
              value: https
            - name: X-Forwarded-Host
              value: ceresterapiayformacion.com
            - name: Host
              value: ceresterapiayformacion.com
          initialDelaySeconds: 10
          periodSeconds: 30
          timeoutSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /?nocache
            port: 80
            httpHeaders:
            - name: X-Forwarded-Proto
              value: https
            - name: X-Forwarded-Host
              value: ceresterapiayformacion.com
            - name: Host
              value: ceresterapiayformacion.com
          initialDelaySeconds: 30
          periodSeconds: 60
          timeoutSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/html
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-role.kubernetes.io/worker
                operator: In
                values:
                - "true"
              # - key: node.kubernetes.io/local
              #   operator: In
              #   values:
              #   - "true"
      
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wordpress-ceres
      

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-maitri
  namespace: wordpress
  labels:
    app: wordpress-maitri
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress-maitri
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: wordpress-maitri
    spec:
      containers:
      - name: wordpress-maitri
        image: wordpress:5.4-apache
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "1Gi"
            cpu: "150m"
          limits:
            memory: "2Gi"
            cpu: "650m"
        readinessProbe:
          httpGet:
            path: /?nocache
            port: 80
            httpHeaders:
            - name: X-Forwarded-Proto
              value: https
            - name: X-Forwarded-Host
              value: asociacionmaitri.es
            - name: Host
              value: asociacionmaitri.es
          initialDelaySeconds: 10
          periodSeconds: 30
          timeoutSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /?nocache
            port: 80
            httpHeaders:
            - name: X-Forwarded-Proto
              value: https
            - name: X-Forwarded-Host
              value: asociacionmaitri.es
            - name: Host
              value: asociacionmaitri.es
          initialDelaySeconds: 30
          periodSeconds: 60
          timeoutSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/html
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-role.kubernetes.io/worker
                operator: In
                values:
                - "true"
              # - key: node.kubernetes.io/local
              #   operator: In
              #   values:
              #   - "true"
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wordpress-maitri
