wordpress/services.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   labels:
#     app: wordpress-ceres
#     bgp: blue
#     # l2loadbalancer: enable
#   name: wordpress-ceres-service
#   namespace: wordpress
#   # annotations:
#     # metallb.universe.tf/loadBalancerIPs: 192.168.11.14
#     # lbipam.cilium.io/ips: 192.168.11.14
# spec:
#   ports:
#     - name: http-ceres
#       port: 80
#       protocol: TCP
#       targetPort: 80
#   selector:
#     app: wordpress-ceres
#   sessionAffinity: None
#   type: LoadBalancer

# ---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: wordpress-maitri
  name: wordpress-maitri-service
  namespace: wordpress
spec:
  ports:
    - name: http-maitri
      port: 3080
      protocol: TCP
      targetPort: 80
  selector:
    app: wordpress-maitri
  sessionAffinity: None
  type: ClusterIP

# ---

# apiVersion: v1
# kind: Service
# metadata:
#   labels:
#     app: wordpress-maitri
#   name: wordpress-maitri-service-testing
#   namespace: wordpress
#   annotations:
#     metallb.universe.tf/loadBalancerIPs: 192.168.11.100
# spec:
#   ports:
#     - name: http
#       port: 80
#       protocol: TCP
#       targetPort: 80
#   selector:
#     app: wordpress-maitri
#   sessionAffinity: None
#   type: LoadBalancer

# ---

# apiVersion: v1
# kind: Service
# metadata:
#   labels:
#     app: wordpress-ceres
#   name: wordpress-ceres-service-testing
#   namespace: wordpress
#   annotations:
#     metallb.universe.tf/loadBalancerIPs: 192.168.11.101
# spec:
#   ports:
#     - name: http
#       port: 80
#       protocol: TCP
#       targetPort: 80
#   selector:
#     app: wordpress-ceres
#   sessionAffinity: None
#   type: LoadBalancer
