wordpress/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: wordpress-gateway
  namespace: wordpress
  # annotations:
  #   lbipam.cilium.io/ips: 192.168.11.98
spec:
  gatewayClassName: cilium
  # addresses:
  #   - value: "192.168.11.98"
  listeners:
    # HTTP Listener for example.link
    - name: http-wp-maitri
      port: 80
      protocol: HTTP
      hostname: "asociacionmaitri.es"
      allowedRoutes:
        namespaces:
          from: All

    # HTTPS Listener for example.link
    - name: https-wp-maitri
      port: 443
      protocol: HTTPS
      hostname: "asociacionmaitri.es"
      tls:
        mode: Terminate
        certificateRefs:
        - kind: Secret
          name: tls-maitri-ingress-http
      allowedRoutes:
        namespaces:
          from: All

---

# HTTP Redirection Route (example.link)
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-maitri-redirect
  namespace: wordpress
spec:
  parentRefs:
  - name: wordpress-gateway
    namespace: wordpress
    sectionName: http-wp-maitri
  hostnames:
  - "asociacionmaitri.es"
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
        port: 443

---

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: https-maitri
  namespace: wordpress
spec:
  parentRefs:
  - name: wordpress-gateway
    namespace: wordpress
    sectionName: https-wp-maitri
  hostnames:
  - "asociacionmaitri.es"
  rules:
  - backendRefs:
    - name: wordpress-maitri-service
      port: 80
