wordpress/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: wordpress-ceres-ingress
#   namespace: wordpress
#   annotations:
#     kubernetes.io/ingress.class: "traefik"
#     # traefik.ingress.kubernetes.io/rewrite-target: /
#     # traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
#     cert-manager.io/cluster-issuer: "letsencrypt-prod"
# spec:
#   tls:
#    - hosts:
#        - ceresterapiayformacion.com
#      secretName: tls-ceres-ingress-http
#   rules:
#   - host: ceresterapiayformacion.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: wordpress-ceres-service
#             port:
#               number: 80

# ---

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: wordpress-maitri-ingress
#   namespace: wordpress
#   labels:
#     app: wordpress-maitri
#     # l2loadbalancer: enable
#   annotations:
#     # kubernetes.io/ingress.class: "traefik"
#     # traefik.ingress.kubernetes.io/rewrite-target: /
#     # traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
#     ingress.cilium.io/service-type: LoadBalancer
#     cert-manager.io/cluster-issuer: "letsencrypt-prod"
#     lbipam.cilium.io/ips: 192.168.11.98
#     # service.cilium.io/lb-l7: enabled
# spec:
#   ingressClassName: cilium
#   tls:
#    - hosts:
#        - asociacionmaitri.es
#      secretName: tls-maitri-ingress-http
#   rules:
#   - host: asociacionmaitri.es
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: wordpress-maitri-service
#             port:
#               number: 80


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ceres-ingress
  namespace: wordpress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging-dns
    ingress.cilium.io/service-type: LoadBalancer
    ingress.cilium.io/loadbalancer-mode: shared
spec:
  ingressClassName: cilium
  rules:
  - host: ceresterapiayformacion.com
    http:
      paths:
      - backend:
          service:
            name: wordpress-ceres-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ceresterapiayformacion.com
    secretName: ceres-ingress-cert
