wordpress/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-wordpress-to-mariadb
  namespace: wordpress
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: wordpress-ceres
        - podSelector:
            matchLabels:
              app: wordpress-maitri
  podSelector:
    matchLabels:
      app: mariadb
  policyTypes:
    - Ingress
status: {}
